cmake_minimum_required(VERSION 3.17)
project(linKitaevFind0)
set(CMAKE_CXX_STANDARD 17)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
set(BOOST_ROOT /usr/local/install/boost)

set(CMAKE_CXX_FLAGS_RELEASE "-O3")
#set(CMAKE_CXX_FLAGS_RELEASE "-O1")
find_package(Boost 1.45.0)
find_package(GSL REQUIRED)
find_package (Threads)
include_directories("/usr/include/eigen3")
include_directories("/usr/lib/x86_64-linux-gnu")

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(linKitaevFind0 main.cpp consts.hpp solProducer.hpp solProducer.cpp)
    target_link_libraries(linKitaevFind0 ${Boost_LIBRARIES})
    target_link_libraries(linKitaevFind0 Threads::Threads)
    target_link_libraries(linKitaevFind0 GSL::gsl GSL::gslcblas)

endif()
